avancement systeme xp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Terrain.h Terrain.cpp
         Game.h Game.cpp
         res.qrc
+        Objet.h
+        OrbeXP.h
+        OrbeXP.cpp
 
 
     )
