apparition de l'orbe à la mort du monstre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Game.h Game.cpp
         res.qrc
 
+        Objet.h
+        OrbeXP.h OrbeXP.cpp
+
 
     )
 # Define target properties for Android with Qt 6 as:
