ajout des notifications de degat quand le player ou les monstres subissent des degats

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         hpbar.h hpbar.cpp
         xpbar.h xpbar.cpp
         hud.h hud.cpp
+        damageindicator.h damageindicator.cpp
 
 
     )
