--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Objet.h
         OrbeXP.h OrbeXP.cpp
         Vague.h Vague.cpp
+        Projectile.h Projectile.cpp
 
 
     )
